--- a/src/components/dumb/Button/Button.scss
+++ b/src/components/dumb/Button/Button.scss
@@ -1,8 +1,12 @@
 @import "./../../../styles/variables";
 
 #button--container {
+  width: $mobile-320;
+  display: flex;
+  justify-content: center;
+
   .button {
-    width: 200px;
+    width: 80%;
     padding: 7px 0;
     @include border-radius(5px);
     border: none;
