--- a/src/components/dumb/Text/Text.scss
+++ b/src/components/dumb/Text/Text.scss
@@ -1,19 +1,16 @@
 @import "./../../../styles/variables";
+@import "./../../../styles/classes";
 
-.global--title {
+#global--title {
   font-family: $fontRoboto;
   color: $colorPrimary;
   font-size: 20px;
   text-align: left;
-
-  .bold {
-    font-weight: bold;
-  }
 }
 
-.global--subtitle {
+#global--subtitle {
   font-family: $fontRoboto;
-  color: $colorPrimary;
+  color: $colorGray;
   font-size: 14px;
   text-align: left;
   line-height: 20px;
