--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,6 +3,7 @@
 $colorWhite: #ffffff;
 $colorPrimary: #35438e;
 $colorGray: #A0ADBD;
+$colorRed: #CF5152;
 $colorBackground: #C8C5E2;
 
 // media queries
@@ -72,4 +73,11 @@ sans-serif;
   /* Internet Explorer/Edge */
   user-select: none;
   /* Non-prefixed version, currently supported by Chrome, Opera and Firefox */
+}
+
+@mixin transition($transition) {
+  transition: $transition;
+  -o-transition: $transition;
+  -moz-transition: $transition;
+  -webkit-transition: $transition;
 }
