--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,6 +2,7 @@
 
 $colorWhite: #ffffff;
 $colorPrimary: #35438e;
+$colorSuccess: #33BE41;
 $colorGray: #A0ADBD;
 $colorRed: #CF5152;
 $colorBackground: #C8C5E2;
