--- a/src/components/dumb/CardHeader/CardHeader.scss
+++ b/src/components/dumb/CardHeader/CardHeader.scss
@@ -2,6 +2,7 @@
 
 #card-header--container {
   display: flex;
+  justify-content: center;
 
   .icon--container {
     width: 15%;
@@ -10,6 +11,7 @@
     .icon {
       width: 100%;
     }
+
   }
 
   .text--container {
@@ -25,6 +27,28 @@
 
       h3 {
         color: $colorRed !important;
+      }
+    }
+  }
+
+  &.currency-status {
+    .text--container {
+      h2 {
+        color: $colorPrimary;
+        font-size: 15px;
+      }
+    }
+
+    .icon--container {
+      width: 5%;
+    }
+  }
+
+  &.text-big {
+    .text--container {
+      h2 {
+        color: $colorPrimary;
+        font-size: 32px;
       }
     }
   }
