--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,7 +5,7 @@ $colorPrimary: #35438e;
 $colorSuccess: #33BE41;
 $colorGray: #A0ADBD;
 $colorRed: #CF5152;
-$colorBackground: #C8C5E2;
+$colorBackground: rgb(241, 241, 241);
 
 // media queries
 
