--- a/src/components/dumb/Icon/Icon.scss
+++ b/src/components/dumb/Icon/Icon.scss
@@ -8,7 +8,7 @@
   background-color: $colorWhite;
   cursor: pointer;
   @include border-radius(10px);
-  @include box-shadow(0px 0px 10px -8px rgba(0, 0, 0, 0.75));
+  // @include box-shadow(0px 0px 10px -8px rgba(0, 0, 0, 0.75));
 
   .icon__image {
     width: 90%;
