--- a/src/components/dumb/CardHeader/CardHeader.scss
+++ b/src/components/dumb/CardHeader/CardHeader.scss
@@ -48,7 +48,7 @@
     .text--container {
       h2 {
         color: $colorPrimary;
-        font-size: 32px;
+        // font-size: 20px;
       }
     }
   }
