Button, Text and Separator updates

--- a/src/components/dumb/Separator/Separator.scss
+++ b/src/components/dumb/Separator/Separator.scss
@@ -4,4 +4,11 @@
   border: 1px solid $colorBackground;
   width: 90%;
 
+  &.medium {
+    margin: 15px 0;
+  }
+
+  &.empty {
+    border: none;
+  }
 }
