--- a/src/components/dumb/Button/Button.scss
+++ b/src/components/dumb/Button/Button.scss
@@ -1,12 +1,13 @@
 @import "./../../../styles/variables";
 
 #button--container {
-  width: $mobile-320;
+  width: 90%;
   display: flex;
   justify-content: center;
 
   .button {
-    width: 80%;
+    width: 100%;
+    height: 40px;
     padding: 7px 0;
     @include border-radius(5px);
     border: none;
@@ -14,5 +15,6 @@
     font-size: 15px;
     color: white;
     background-color: $colorPrimary;
+    cursor: pointer;
   }
 }
