--- a/src/components/dumb/Input/Input.scss
+++ b/src/components/dumb/Input/Input.scss
@@ -9,8 +9,8 @@
     width: 100%;
     height: 44px;
     padding: 10px 0 0 13px;
-    border-radius: 4px;
-    border: none;
+    border: 1px solid $colorBackground;
+    @include border-radius(10px);
     box-sizing: border-box;
     display: block;
     font-size: 14px;
