--- a/src/components/dumb/CurrencyStatus/CurrencyStatus.scss
+++ b/src/components/dumb/CurrencyStatus/CurrencyStatus.scss
@@ -1,7 +1,11 @@
 @import "./../../../styles/variables";
 
 #currency-status {
-  width: 100%;
+  // width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  max-width: 280px;
   cursor: pointer;
 
   .principal {
