--- a/src/components/dumb/SpanList/SpanList.scss
+++ b/src/components/dumb/SpanList/SpanList.scss
@@ -12,12 +12,17 @@
   }
 
   .span-list--content {
-    padding: 0 10%;
+    padding: 0 8%;
+    width: 50%;
+
   }
 
   .span-list--content--url {
     color: $colorPrimary;
-    padding: 0 10%;
+    padding: 0 5%;
+    text-align: right;
+    width: 50%;
+
     text-transform: none;
     text-decoration: none;
     cursor: pointer;
