--- a/src/App.scss
+++ b/src/App.scss
@@ -1,13 +1,20 @@
+@import "./styles/variables";
+
 .container {
   width: 100%;
-  padding-top: 200px;
   display: flex;
-
-  .component {
-    margin: 0 auto;
-  }
+  justify-content: center;
+  align-items: center;
 }
 
 #responsive--screen {
-  width: 375px;
+  // width: 375px;
+  // min-width: 350px;
+  border: black;
+  border-style: solid;
+  border-width: 1px;
+  background-color: $colorBackground;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
