--- a/src/components/dumb/Icon/Icon.scss
+++ b/src/components/dumb/Icon/Icon.scss
@@ -8,11 +8,14 @@
   background-color: $colorWhite;
   cursor: pointer;
   @include border-radius(10px);
-  // @include box-shadow(0px 0px 10px -8px rgba(0, 0, 0, 0.75));
 
   .icon__image {
     width: 90%;
     margin: 0 auto;
+
+    @media screen and (max-width: 400px) {
+      width: 75%;
+    }
   }
 
   .icon__title {
