--- a/src/components/dumb/Text/Text.scss
+++ b/src/components/dumb/Text/Text.scss
@@ -6,6 +6,14 @@
   color: $colorPrimary;
   font-size: 20px;
   text-align: left;
+
+  &.text-center {
+    text-align: center;
+  }
+
+  @media screen and (max-width: 450px) {
+    font-size: 14px;
+  }
 }
 
 #global--subtitle {
