--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,6 @@
 // colors
 
+$colorBlack: #000000;
 $colorWhite: #ffffff;
 $colorPrimary: #35438e;
 $colorSuccess: #33BE41;
@@ -17,6 +18,7 @@ $desk-1024: 1024px;
 $mobile-900: 900px;
 $mobile-768: 768px;
 $mobile-600: 600px;
+$mobile-520: 520px;
 $mobile-460: 460px;
 $mobile-420: 420px;
 $mobile-375: 375px;
