--- a/src/App.scss
+++ b/src/App.scss
@@ -8,9 +8,9 @@
 }
 
 #responsive--screen {
-  // width: 375px;
-  // min-width: 350px;
-  border: black;
+  width: 100%;
+  max-width: $mobile-768;
+  border: $colorBlack;
   border-style: solid;
   border-width: 1px;
   background-color: $colorBackground;
