--- a/src/components/dumb/CardHeader/CardHeader.scss
+++ b/src/components/dumb/CardHeader/CardHeader.scss
@@ -20,9 +20,9 @@
   }
 
   &.header {
-    width: 100%;
-    padding: 15px 15px 0px 15px;
-    margin-left: 20px;
+    width: 95%;
+    padding: 15px 0px 0px 15px;
+    // margin-left: 20px;
     display: flex;
     justify-content: left;
 
