--- a/src/index.scss
+++ b/src/index.scss
@@ -6,3 +6,32 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+// * {
+//   margin: 0;
+//   padding: 0;
+// }
+
+// html {
+//   width: 100vw;
+//   height: 100vh;
+// }
+
+// /* CSS which you need for blurred box */
+body {
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: top;
+  background-image: url(https://wallpaperaccess.com/full/395448.jpg);
+  width: 100%;
+  height: 100%;
+  font-family: Arial, Helvetica;
+  letter-spacing: 0.02em;
+  font-weight: 400;
+  -webkit-font-smoothing: antialiased;
+
+  @media screen and (max-width: 600px) {
+    background-position: inherit;
+  }
+}
