--- a/src/index.scss
+++ b/src/index.scss
@@ -23,7 +23,7 @@ body {
   background-attachment: fixed;
   background-size: cover;
   background-position: top;
-  background-image: url(https://wallpaperaccess.com/full/395448.jpg);
+  background-image: url(./assets/image/wallpaper.jpg);
   width: 100%;
   height: 100%;
   font-family: Arial, Helvetica;
