--- a/src/components/dumb/Avatar/Avatar.scss
+++ b/src/components/dumb/Avatar/Avatar.scss
@@ -1,17 +1,17 @@
-#avatar-image {
+#avatar {
   border-radius: 40%;
 
-  &.image-big {
+  &.--big {
     width: 100px;
     height: 100px;
   }
 
-  &.image-medium {
+  &.--medium {
     width: 50px;
     height: 50px;
   }
 
-  &.image-small {
+  &.--small {
     width: 30px;
     height: 30px;
   }
