responsive heigth fix and server json simulator backend

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,17 +1,18 @@
-@import "./styles/variables";
+@import './styles/variables';
 
 .container {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #responsive--screen {
-  width: 100%;
-  max-width: $mobile-768;
-  background-color: $colorBackground;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+    width: 100%;
+    min-height: 100vh;
+    max-width: $mobile-768;
+    background-color: $colorBackground;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
